kustomize/analysis/canary-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-analysis-preview
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: lrcsdp.support.cf-cd.com
    http:
      paths:
      - path: /canary-analysis-preview(/|$)(.*)
        backend:
          service:
            name: canary-analysis-preview
            port:
              number: 80
        pathType: Prefix
